<resources>
    <string name="app_name">Hotel Samdariya</string>

    <string name="noInternetMsg"> No Internet Connection! </string>
    <string name="slowInternetMsg"> Slow Internet Connection! Please Try Again Later! </string>

    <string name="placeholder"> Placeholder String </string>
    <string name="welcome"> Welcome, </string>
    <string name="loginMessage"> Please login to confirm your booking </string>

    <!--MENU-->
    <string name="home">Home</string>
    <string name="hotel">Hotels</string>
    <string name="banquetHalls">Banquet Halls</string>
    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_testng">Testng</string>
    <!--MENU-->


</resources>
